Basic homepage start

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuggetarian Union</title>
+    <link rel = "stylesheet" href = "styles.css">
 </head>
 
+<header>
+    <img src = "assets/Flag.png" width = "8%" height = "auto" style = "padding-right: 1%;"> 
+    <div>The Nuggetarian Union</div>
+</header>
+
 <body>
-    Test ha ha ha
+
 </body>
+
+<footer>
+
+</footer>
 
 </html>
