Mostly final website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuggetarian Union</title>
     <link rel = "stylesheet" href = "styles.css">
+    <link rel = "icon" href = "assets/Flag.png" type = "image/png">
 </head>
 
 <header>
@@ -13,11 +14,63 @@
 </header>
 
 <body>
+    <h1 style = "text-align: center;">The Nuggetarian Union</h1>
+    <p>
+        The Nuggetarian Union offers citizens a way to enjoy everything to the fullest. With advanced legislation and progressive
+        views, the Union is the perfect place to live and thrive.
+    </p>
+    <p>
+        Founded by the first president, Christopher Higgins, the Union has become one of the strongest entities on the planet, uniting
+        everyone of all background under the same banner.
+    </p>
 
+    <div class = "button-section">
+    <a href = "About.html">
+        <button style = "text-align: center;">
+            Our History
+        </button>
+    </a>
+    </div>
+
+    <div class = "button-section">
+        <a href = "CommonInformation.html">
+            <button style = "text-align: center;">
+                Info You Might be Looking For
+            </button>
+        </a>
+    </div>
+
+    <div class = "button-section">
+        <a href = "Comittee.html">
+            <button style = "text-align: center;">
+                Comittee Members
+            </button>
+        </a>
+    </div>
+
+    <div class = "button-section">
+        <a href = "Announcements.html">
+            <button style = "text-align: center;">
+                Announcements
+            </button>
+        </a>
+    </div>
+
+    <div style = "font-size: 7pt;">
+        *If you are looking for a specific law, announcement, or piece of info not on this site, please go to the main office.
+    </div>
 </body>
 
 <footer>
-
+    <div class = "footer-column">
+        <a href = "index.html">Home</a>
+        <a href = "About.html">About</a>
+        <a href = "CommonInformation.html">Common Info</a>
+    </div>
+    <div class = "footer-column">
+        <a href = "Comittee.html">Comittee Members</a>
+        <a href = "Announcements.html">Announcements</a>
+    </div>
 </footer>
 
 </html>
