--- a/announcements/TemporaryLawRepeal.html
+++ b/announcements/TemporaryLawRepeal.html
@@ -14,31 +14,54 @@
 </header>
 
 <body>
-    <h1 style = "text-align: center;">Temporary/Permanent Law Repeals</h1>
+    <h1 style = "text-align: center;">Temporary Law Repeals</h1>
     <div class = "announcement-date">
         <div>March 23rd, 2025</div>
         <div>Government of the NU</div>
     </div>
 
     <p>
-        Today, I am now open to suggest on mob encampments and farms.
+        The president has temporarily repealed a number of laws due to early expenses that the union can currently not sustain.
     </p>
 
     <p>
-        A problem in the last empire was the government's Platform farm. While providing a sustainable way for food and resources, the area was often
-        slow to go through, which wouldn't have been as much of a problem if it wasn't in the largest settled area of the empire. This time around, I
-        have a few different ideas to combat this, and I am open to even further suggestions.
+        Act 6-2-3, the Right to Minimum Wage, has been put on hold due to lack of Iron in the empire.
     </p>
 
     <p>
-        The two guaranteed pieces that will be in the drafted bill is a tax and mandatory distance. If there is a large corporate farm in a largely settled 
-        area, then the farm will be taxed an extra 5% when it's time for collections. This will increase by 3% for every collection it doesn't comply with 
-        regulations. The mandatory distance will be roughly 1,000 meters away from any large cities or settlements. If they are fewer than this radius, then
-        they will be subject to the first item's tax.
+        7-2, Universal Basic Income, has been put on hold due to no bank to partner with.
     </p>
 
     <p>
-        Soon, I will be signing on a comittee, and any suggestions can be brought up to them, which can then be passed on to me.
+        7-8, the Safe Connected Empire Act, has been temporarily restricted due to lack of development.
+    </p>
+
+    <p>
+        7-10, the Restart Subsidy Act, has been put on hold due to lack of resources.
+    </p>
+
+    <p>
+        7-15, the Iron farm Regulation Act, has been temporarily repealed, meaning Iron Farms in the empire are permitted for at least 2 weeks.
+    </p>
+
+    <p>
+        7-18, the Government Salary Act, has been restricted due to funds.
+    </p>
+
+    <p>
+        7-22, the Soft Reset Accord, has been put on hold due to lack of resources.
+    </p>
+
+    <p>
+        7-24, the Deficit Act, has been barred due to lack of Iron to borrow.
+    </p>
+
+    <p>
+        A policy from the last empire, which was government supplied armour, is temporarily restricted for at least 4 weeks.
+    </p>
+
+    <p>
+        These will be re-evaluated in two weeks, when the president at the time will revise these orders with 9-15E-X.
     </p>
 
 </body>
