Number of additions

--- a/Comittee.html
+++ b/Comittee.html
@@ -14,7 +14,32 @@
 </header>
 
 <body>
-    <h1 style = "text-align: center;">There is currently no comittee appointed as the union was just established.</h1>
+    <h1 style = "text-align: center;">Presidential Comittee for Term 1</h1>
+
+    <p>
+        President Christopher Higgins has now selected and appointed the members for the first presidential comittee.
+    </p>
+
+    <h2 style = "text-align: center;">President Christopher Higgins (Finance)</h2>
+
+    <p>
+        President Christopher Higgins will be serving on the comittee as the finance officer, allowing him to easily manage finances for the
+        nation's budget this term.
+    </p>
+
+    <h2 style = "text-align: center;">Officer Michael Hussey-Fisher (Farming Planner)</h2>
+
+    <p>
+        Officer Michael Hussey-Fisher will be serving on the comittee as the farming planner, allowing him to easily manage the nation's food
+        supply and plan for the future, whether it be food, fish, or whatever else over the next two weeks.
+    </p>
+
+    <b>
+        <p>
+            The President will not act as a member of the comittee in the case of impeachment or "comittee first" approaches that may come before
+            presidential duties.
+        </p>
+    </b>
 </body>
 
 <footer>
