--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
     </div>
 
     <div class = "button-section">
+        <a href = "TaxTool.html">
+            <button style = "text-align: center;">
+                Tax Helper
+            </button>
+        </a>
+        </div>
+
+    <div class = "button-section">
         <a href = "Comittee.html">
             <button style = "text-align: center;">
                 Comittee Members
