--- a/Announcements.html
+++ b/Announcements.html
@@ -17,6 +17,14 @@
     <h1 style = "text-align: center;">Announcements</h1>
 
     <div class = "button-section">
+        <a href = "announcements/JoiningBonus.html">
+            <button style = "text-align: center;">
+                Temporary Joining Bonus
+            </button>
+        </a>
+    </div>
+
+    <div class = "button-section">
         <a href = "announcements/Term1Budget.html">
             <button style = "text-align: center;">
                 Term 1 Budget
