--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -22,16 +22,17 @@
 
     <p>
         The current tax rate for both Sales and Income is 5%. The tax rate for Citizens is 7% and Businesses is 10%. The next tax collection
-        date is the currently scheduled election date.
+        date is the currently scheduled election date. If you joined the Nuggetarian Union before April 3rd, 2025, then you will not have any
+        sales tax or income tax, and your standard citizen tax will be 2% until after April 3rd, 2025.
     </p>
 
     <p>
-        The next election for the Nuggetarian Union is April 3rd, 2024. You can vote online or at a booth on election day. Incumbent president
+        The next election for the Nuggetarian Union is April 3rd, 2025. You can vote online or at a booth on election day. Incumbent president
         Christopher Higgins is the only one running in the election.
     </p>
 
     <p>
-        There is currently no Presidential Comittee appointed due to other priorities.
+        The presidential comittee consists of President Christopher Higgins (Finance) and Officer Michael Hussey-Fisher (Farming Planner).
     </p>
 
     <p>
