Updated tax rates

--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -23,7 +23,9 @@
     <p>
         The current tax rate for both Sales and Income is 5%. The tax rate for Citizens is 7% and Businesses is 10%. The next tax collection
         date is the currently scheduled election date. If you joined the Nuggetarian Union before April 3rd, 2025, then you will not have any
-        sales tax or income tax, and your standard citizen tax will be 2% until after April 3rd, 2025.
+        sales tax or income tax, and your standard citizen tax will be 2% until after April 3rd, 2025. <b>Please note that the president has
+            updated this and will be making this the default for the first collection after April 3rd, and the tax rate is instead 0%.
+        </b>
     </p>
 
     <p>
