--- a/TaxTool.html
+++ b/TaxTool.html
@@ -56,7 +56,7 @@
         <input type = "number" id = "income-tax" value = "0" min = "0"><br>
 
         <label for="adjust-rate">
-            <input type = "checkbox" id = "adjust-rate"> Adjust to Alternate Rate (Joined before April 3rd, 2025)
+            <input type = "checkbox" id = "adjust-rate"> This is an optional return
         </label><br>
         
         <div class="button-section">
