Adjustments for term 2

--- a/Announcements.html
+++ b/Announcements.html
@@ -17,6 +17,14 @@
     <h1 style = "text-align: center;">Announcements</h1>
 
     <div class = "button-section">
+        <a href = "announcements/LawActivations.html">
+            <button style = "text-align: center;">
+                Restriction Revist
+            </button>
+        </a>
+    </div>
+
+    <div class = "button-section">
         <a href = "announcements/DiamondIronBonus.html">
             <button style = "text-align: center;">
                 Diamond Iron Bonus
