--- a/Announcements.html
+++ b/Announcements.html
@@ -17,6 +17,14 @@
     <h1 style = "text-align: center;">Announcements</h1>
 
     <div class = "button-section">
+        <a href = "announcements/CommitteProportion.html">
+            <button style = "text-align: center;">
+                Amendments 9-7-1 and 9-10-1
+            </button>
+        </a>
+    </div>
+
+    <div class = "button-section">
         <a href = "announcements/PermanentBonus.html">
             <button style = "text-align: center;">
                 Permanent Joining Bonus
