--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -26,8 +26,8 @@
     </p>
 
     <p>
-        The next election for the Nuggetarian Union is April 17th, 2025. You can vote online or at a booth on election day. Incumbent president
-        Christopher Higgins is the only one running in the election.
+        The next election for the Nuggetarian Union is April 10th, 2025. You can vote online or at a booth on election day. Incumbent president
+        Christopher Higgins is the only one running in the election (Committee of himself, Fisher, and Mackenzie).
     </p>
 
     <p>
@@ -37,7 +37,7 @@
 
     <p>
         There are no current threats for sovereignty or risks to individuals that the government must make citizens notified of. This page, as well
-        as a notification of some sort, will go out should this change.
+        as a notification of some sort, will go out should this change, however President Higgins signed Series 8 legislation on April 6th, 2025.
     </p>
 
 </body>
