--- a/announcements/PresidentHigginsResigns.html
+++ b/announcements/PresidentHigginsResigns.html
@@ -16,38 +16,52 @@
 <body>
     <h1 style = "text-align: center;">Update From President Higgins</h1>
     <div class = "announcement-date">
-        <div>***DATE***</div>
+        <div>April 15th, 2025</div>
         <div>President Christopher Higgins</div>
     </div>
 
     <p>
-        Back in March I first assumed the office to be the first President of the Nuggetarian Union, and I worked to build the nation into the absolute 
-        powerhouse it is now. Every citizen has armour and security with finances aplenty, and foreign populations have benfitted tremendously from my 
-        tenure as the President of the Nuggetarian Union.
+        Back in March, I founded the Nuggetarian Union and continued my consecutive rule as president, a lineage that I have held for now 6 consecutive 
+        empires. Currently, I am serving the third term of my presidency, after being extablished as the first president by default, and running unopposed
+        the second time.
     </p>
 
     <p>
-        I believe that I have now set up the nation to choose a successor without me, and I am ready for that. It has been a priviledge to serve, and I 
-        am grateful to have continued the long streak of my leadership between empires, but it is time for it to come to an end. I intend to resign from 
-        the position of Nuggetarian Union President by the end of the week. On Wednesday, I will be signing my last order, which will solidify my resignation, 
-        as well as dissolve this session of the Presidential Committee and government. I will serve the next term to ensure a smooth transition, and then 
-        I will retire from public service.
+        I had a few goals. Moderation, which has been achieved, progression, which has been achieved, basic rights, which has been achieved, and so 
+        much more.
     </p>
 
     <p>
-        This might not have been the biggest surprise. I wasn't secretive about there being an early end to the term, my recent tenure has seen less and 
-        less legislation get signed, and even this budget was smaller than usual, only tapping into the reserves by about 30%. In reality,  have been 
-        preparing my political allies for this move.
+        Some of you might have already seen this coming. Last term, I dismissed the government after establishing the office of the Vice President, and 
+        now, it is time to set the precedent. I have now set up the empire to be left in good hands to a potential successor.
     </p>
 
     <p>
-        When my resignation comes into effect on Wednesday, I will be appointing Fisher, a committee officer, as the acting president until the election 
-        this Thursday.
+        Last night, I informed the members of my Committee, Vice President and Officer Fisher, and Officer Mackenzie, the same thing that I decided I would 
+        do last term, and the same thing I am announcing today.
     </p>
 
     <p>
-        I have served the Nuggetarian Empires as the consecutive leader since 2022. I always knew that I would merely establish the empire and global relations 
-        this time before taking a back seat.
+        <b>I intend to resign as the president of the Nuggetarian Union next Tuesday.</b>
+    </p>
+
+    <p>
+        If you count all my empires, I've been serving consecutively since the Ultimate Nuggetarian Empire over 3 years ago. It's now time for a pause, 
+        at least, from such a high title.
+    </p>
+
+    <p>
+        With my resignation, I have asked Vice President/Committee Officer Fisher to become the next President. He has agreed, and I have already drafted 
+        the piece of legislation required to sign for both my resignation and his ascension to the presidency.
+    </p>
+
+    <p>
+        I will still continue to serve in the government, and I have offered my effort to Fisher to serve on his committee to continue my duty as 
+        the officer of Finance.
+    </p>
+
+    <p>
+        It has been a privilege to serve as the president of the Nuggetarian Union, which, by large, affected the entire world.
     </p>
 
     <p>
