--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -21,18 +21,18 @@
     </p>
 
     <p>
-        The current tax rate for both Sales and Income is 5%. The tax rate for Citizens is 7% and Businesses is 10%. The next tax collection
+        The current tax rate for both Sales and Income is 4%. The tax rate for Citizens is 5% and Businesses is 7%. The next tax collection
         date is the currently scheduled election date.
     </p>
 
     <p>
-        The next election for the Nuggetarian Union is April 10th, 2025. You can vote online or at a booth on election day. Incumbent president
-        Christopher Higgins is the only one running in the election (Committee of himself, Fisher, and Mackenzie).
+        The next election for the Nuggetarian Union is April 24th, 2025. You can vote online or at a booth on election day. Incumbent president
+        Christopher Higgins is the only one running in the election (Committee for Term 3 not decided).
     </p>
 
     <p>
         The presidential comittee consists of President Christopher Higgins (Finance), Officer Michael Hussey-Fisher (Farming Planner), and Officer 
-        Mackenzie Moores (Livestock and Food Products).
+        Mackenzie Moores (Livestock and Food Products). Christopher Higgins was elected as Committee Leader and will have 100 votes, the others 0.
     </p>
 
     <p>
