--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -22,17 +22,18 @@
 
     <p>
         The current tax rate for both Sales and Income is 4%. The tax rate for Citizens is 5% and Businesses is 7%. The next tax collection
-        date is the currently scheduled election date.
+        date is the currently scheduled election date. <b>AS OF APRIL 11th 2025 UNTIL APRIL 24th, 2025, TAX RATES FOR THESE ARE 0%.</b>
     </p>
 
     <p>
         The next election for the Nuggetarian Union is April 24th, 2025. You can vote online or at a booth on election day. Incumbent president
-        Christopher Higgins is the only one running in the election (Committee for Term 3 not decided).
+        Christopher Higgins is the only one running in the election (Committee for Term 4 not decided).
     </p>
 
     <p>
-        The presidential comittee consists of President Christopher Higgins (Finance), Officer Michael Hussey-Fisher (Farming Planner), and Officer 
-        Mackenzie Moores (Livestock and Food Products). Christopher Higgins was elected as Committee Leader and will have 100 votes, the others 0.
+        The presidential comittee consists of President Christopher Higgins (Finance), Officer and Vice President Elissa Chippett (Northern Affairs), and Officer 
+        Mackenzie Moores (Livestock and Food Products). Elissa Chippett was elected as Committee Leader/Vice President and will have 67 votes, the other 33 going 
+        to Christopher Higgins.
     </p>
 
     <p>
