Committee changes and resignation announcement

--- a/About.html
+++ b/About.html
@@ -52,7 +52,18 @@
         empire, but it has the most impressive infrastructure.
     </p>
     <p>
-        And that is the history up until now. Back to a democracy, Chris will serve as the first president, and then whatever happens... happens.
+        And that is the history up until now. Back to a democracy, Chris will serve as the first president.
+    </p>
+
+    <b>Current History - Chris Presidency</b>
+
+    <p>
+        Chris began the nation by singing independance on March 22nd, 2025. There was no election, and the next term after 2 weeks also had no real 
+        election as Chris ran unopposed. At the start of his second term, he signed amendments to committee powers, and called an early election. 
+        Hoping for a strong mandate as vice President, he lost the bid to Fisher, who recieved 67 committee votes against Chris' 33. After a scandal the
+        next day, Chris ousted him from the committee and replaced him with Elissa. The next Sunday, a committee election was held where Elissa was 
+        the only one running to be Vice President. That Tuesday, Chris announced his intent to resign from the presidency in a week, and Elissa would be 
+        sworn in as the next President two days before the scheduled election.
     </p>
 </body>
 
