--- a/Comittee.html
+++ b/Comittee.html
@@ -14,7 +14,7 @@
 </header>
 
 <body>
-    <h1 style = "text-align: center;">Presidential Comittee for Term 1</h1>
+    <h1 style = "text-align: center;">Presidential Comittee for Term 3</h1>
 
     <p>
         President Christopher Higgins has now selected and appointed the members for the first presidential comittee.
@@ -27,19 +27,20 @@
         nation's budget this term.
     </p>
 
-    <h2 style = "text-align: center;">Officer Michael Hussey-Fisher (Farming Planner)</h2>
+    <h2 style = "text-align: center;">Officer Elissa Chippett (Vice President, Northern Affairs)</h2>
 
     <p>
-        Officer Michael Hussey-Fisher will be serving on the comittee as the farming planner, allowing him to easily manage the nation's food
-        supply and plan for the future, whether it be food, fish, or whatever else over the next two weeks.
+        Officer Elissa Chippett will be serving on the comittee as the Officer of Northern Affairs, allowing her to easily manage the nation's
+        foreign relations over the next two weeks.
     </p>
 
-    <b>
-        <p>
-            The President will not act as a member of the comittee in the case of impeachment or "comittee first" approaches that may come before
-            presidential duties.
-        </p>
-    </b>
+    <h2 style = "text-align: center;">Officer Mackenzie Moores (Livestock)</h2>
+
+    <p>
+        Officer Mackenzie Moores will be serving on the comittee as the Officer of Livestock, allowing her to easily manage the nation's
+        livestock and food items over the next two weeks.
+    </p>
+
 </body>
 
 <footer>
