--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -27,7 +27,7 @@
 
     <p>
         The next election for the Nuggetarian Union is April 24th, 2025. You can vote online or at a booth on election day. Incumbent president
-        Christopher Higgins is the only one running in the election (Committee for Term 4 not decided).
+        Christopher Higgins is the only one running in the election (Same committee as current).
     </p>
 
     <p>
