--- a/announcements/PresidentHigginsResigns.html
+++ b/announcements/PresidentHigginsResigns.html
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-        Last night, I informed the members of my Committee, Vice President and Officer Fisher, and Officer Mackenzie, the same thing that I decided I would 
+        Last night, I informed the members of my Committee, Vice President and Officer Elissa, and Officer Mackenzie, the same thing that I decided I would 
         do last term, and the same thing I am announcing today.
     </p>
 
@@ -51,13 +51,13 @@
     </p>
 
     <p>
-        With my resignation, I have asked Vice President/Committee Officer Fisher to become the next President. He has agreed, and I have already drafted 
-        the piece of legislation required to sign for both my resignation and his ascension to the presidency.
+        With my resignation, I have asked Vice President/Committee Officer Elissa to become the next President. She has agreed, and I have already drafted 
+        the piece of legislation required to sign for both my resignation and her ascension to the presidency.
     </p>
 
     <p>
-        I will still continue to serve in the government, and I have offered my effort to Fisher to serve on his committee to continue my duty as 
-        the officer of Finance.
+        I will still continue to serve in the government, and I have offered my effort to Elissa to serve on his committee to continue my duty as 
+        the officer of Finance. I am just taking a break from the office of President.
     </p>
 
     <p>
