--- a/Comittee.html
+++ b/Comittee.html
@@ -17,7 +17,7 @@
     <h1 style = "text-align: center;">Presidential Comittee for Term 3</h1>
 
     <p>
-        President Christopher Higgins has now selected and appointed the members for the first presidential comittee.
+        President Christopher Higgins has now selected and appointed the members for the revised third presidential comittee.
     </p>
 
     <h2 style = "text-align: center;">President Christopher Higgins (Finance)</h2>
