--- a/Announcements.html
+++ b/Announcements.html
@@ -17,6 +17,14 @@
     <h1 style = "text-align: center;">Announcements</h1>
 
     <div class = "button-section">
+        <a href = "announcements/TransitionDetails.html">
+            <button style = "text-align: center;">
+                Transition Details
+            </button>
+        </a>
+    </div>
+
+    <div class = "button-section">
         <a href = "announcements/PresidentHigginsResigns.html">
             <button style = "text-align: center;">
                 Message from President Higgins
