--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     </p>
 
     <div class = "button-section">
+        <a href = "VotingWorks.html">
+            <button style = "text-align: center;">
+                Voting/Government Works
+            </button>
+        </a>
+        </div>
+
+    <div class = "button-section">
     <a href = "About.html">
         <button style = "text-align: center;">
             Our History
