--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -26,8 +26,8 @@
     </p>
 
     <p>
-        The next election for the Nuggetarian Union is April 24th, 2025. You can vote online or at a booth on election day. Incumbent president
-        Christopher Higgins is the only one running in the election (Same committee as current).
+        The next election for the Nuggetarian Union is April 24th, 2025. You can vote online or at a booth on election day.
+        Elissa Chippett is the only one running in the election (Same committee as current).
     </p>
 
     <p>
@@ -39,6 +39,12 @@
     <p>
         There are no current threats for sovereignty or risks to individuals that the government must make citizens notified of. This page, as well
         as a notification of some sort, will go out should this change, however President Higgins signed Series 8 legislation on April 6th, 2025.
+    </p>
+
+    <p>
+        <i>
+            If you are looking for information on how the Government works or how to vote, click <a href = "VotingWorks.html">here</a>.
+        </i>
     </p>
 
 </body>
