Transition Details edit

--- a/announcements/TransitionDetails.html
+++ b/announcements/TransitionDetails.html
@@ -46,6 +46,16 @@
         future committees.
     </p>
 
+    <p>
+        <b><i>Edited on April 16th, 2025 at 7:08 PM</i></b>
+    </p>
+
+    <p>
+        Incoming President Elissa Chippett has confirmed internally that she will not be reversing tax policies, and focusing on some expansion of 
+        the city. Her targetted committee does currently include Officers Christopher Higgins and Mackenzie Moores, but not herself. Several other 
+        names are also on the list to be on the committee, but only Christopher Higgins is eligible to be the Vice President.
+    </p>
+
 </body>
 
 <footer>
