--- a/TaxTool.html
+++ b/TaxTool.html
@@ -56,7 +56,7 @@
         <input type = "number" id = "income-tax" value = "0" min = "0"><br>
 
         <label for="adjust-rate">
-            <input type = "checkbox" id = "adjust-rate"> This is a return for a new citizen before April 17th, 2025
+            <input type = "checkbox" id = "adjust-rate"> This is a return for a first time return
         </label><br>
         
         <div class="button-section">
@@ -72,6 +72,10 @@
             <b>
                 If your total is less than 0, then the government owes you that amount
             </b>
+        </p>
+
+        <p style = "font-size: 12pt;">
+            <b>In the event of a tax discrepancy, you will need the generated reference number.</b>
         </p>
 
         <p style = "font-size: 12pt;">
