Changed committee and common info for incoming administration

--- a/Comittee.html
+++ b/Comittee.html
@@ -20,14 +20,14 @@
         President Christopher Higgins has now selected and appointed the members for the revised third presidential comittee.
     </p>
 
-    <h2 style = "text-align: center;">President Christopher Higgins (Finance)</h2>
+    <h2 style = "text-align: center;">Officer Christopher Higgins (Finance)</h2>
 
     <p>
-        President Christopher Higgins will be serving on the comittee as the finance officer, allowing him to easily manage finances for the
+        Officer Christopher Higgins will be serving on the comittee as the finance officer, allowing him to easily manage finances for the
         nation's budget this term.
     </p>
 
-    <h2 style = "text-align: center;">Officer Elissa Chippett (Vice President, Northern Affairs)</h2>
+    <h2 style = "text-align: center;">Officer Elissa Chippett (Vice President, President, Northern Affairs)</h2>
 
     <p>
         Officer Elissa Chippett will be serving on the comittee as the Officer of Northern Affairs, allowing her to easily manage the nation's
