--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -22,7 +22,7 @@
 
     <p>
         The current tax rate for both Sales and Income is 4%. The tax rate for Citizens is 5% and Businesses is 7%. The next tax collection
-        date is the currently scheduled election date. <b>AS OF APRIL 11th 2025 UNTIL APRIL 24th, 2025, TAX RATES FOR THESE ARE 0%.</b>
+        date is the currently scheduled election date. <b>AS OF APRIL 11th 2025, TAX RATES FOR THESE ARE 0%.</b>
     </p>
 
     <p>
@@ -31,7 +31,7 @@
     </p>
 
     <p>
-        The presidential comittee consists of President Christopher Higgins (Finance), Officer and Vice President Elissa Chippett (Northern Affairs), and Officer 
+        The presidential comittee consists of  Officer Christopher Higgins (Finance), Officer/Vice President/President Elissa Chippett (Northern Affairs), and Officer 
         Mackenzie Moores (Livestock and Food Products). Elissa Chippett was elected as Committee Leader/Vice President and will have 67 votes, the other 33 going 
         to Christopher Higgins.
     </p>
