Changes in accordance to committee

--- a/CommonInformation.html
+++ b/CommonInformation.html
@@ -21,13 +21,19 @@
     </p>
 
     <p>
+        <b>
+            DUE TO IMPEACHMENT, THE COMMITTEE IS NOW FULFILLING PRESIDENTIAL DUTIES FOR THE REMAINDER OF THE TERM.
+        </b>
+    </p>
+
+    <p>
         The current tax rate for both Sales and Income is 4%. The tax rate for Citizens is 5% and Businesses is 7%. The next tax collection
         date is the currently scheduled election date. <b>AS OF APRIL 11th 2025, TAX RATES FOR THESE ARE 0%.</b>
     </p>
 
     <p>
-        The next election for the Nuggetarian Union is April 24th, 2025. You can vote online or at a booth on election day.
-        Elissa Chippett is the only one running in the election (Same committee as current).
+        The next election for the Nuggetarian Union is May 15th, 2025. You can vote online or at a booth on election day.
+        Elissa Chippett is running in the election (Same committee as current) alongside former President Christopher Higgins (Same committee as Term 3).
     </p>
 
     <p>
