--- a/TaxTool.html
+++ b/TaxTool.html
@@ -56,7 +56,7 @@
         <input type = "number" id = "income-tax" value = "0" min = "0"><br>
 
         <label for="adjust-rate">
-            <input type = "checkbox" id = "adjust-rate"> This is a return for a first time return
+            <input type = "checkbox" id = "adjust-rate"> This is a return for a government employee
         </label><br>
         
         <div class="button-section">
